# QAOAHP

./: .gitignore  0.15.1  Parameter_utility.py  QAOA_Objective_max_cut.py  QAOA_matrix_simulation.code-workspace  QAOA_max_cut.py  QAOA_objective.py  README.md  Test.ipynb  Test.py  Test2.ipynb  binary_practise.ipynb  binary_recursive.py  core.py  helper_function.py  parameter_utils.py  pyproject.toml  requirements.txt  requirment.txt  setup.py  utils.py
Base/: QAOA_objective.py  __init__.py  base_qaoa_objective.py  base_simulator_class.py  matrix.py  maxcut.py  qaoa_simulator_base.py
Base/Simulators/GPU/: core_rotation.py  digonal.py  qaoa_rotation.py  utils.py
Base/Simulators/python/: QAOA_rotation_python.py  QAOA_simulator.py
Base/precomputation/: __init__.py
Naive_method/: QAOA_circuit.py  maxcut.py
Simulators/python/: QAOA_rotation  QAOA_simulator.py  core_rotation.py
Test/: max_cut_test.ipynb
core_function/: QAOA_simulator.py  base_simulator_class.py  binary_practise.ipynb  core.py  pre_computation_function.py
main/: QAOA_Objective_max_cut.py  QAOA_objective.py  __init__.py  requirements.txt  utils.py
main/Base/: maxcut.py  qaoa_circuit1.py  qaoa_circuit_maxcut.py
main/Base/Simulators/GPU/: qaoa_simulatorbase.py
main/Base/precomputation/: gpu_numba.py  numpy_vectorized.py
main/Test/: Test2.ipynb  test_qaoa.py
precomputation/: __init__.py
simulation_qaoa_LV/: pyvenv.cfg
simulation_qaoa_LV/Scripts/: activate  activate.bat  get_gprof  get_objgraph  numba  undill
