[project]
name = "QAOAHP"
description = "A hybrid quantum computation platform"
readme = "README.md"
authors = [
    {name = "Amir Alizadeh", email = "N1259534@my.nty.ac.uk"}
]
requires-python = ">=3.10.0"
dependencies = [
    'networkx==3.0.0',
    'importlib-resources>=5.2.2',
    'numpy==1.26.4',
    'numba>=0.56.4,<1',
    'pandas>=2.0.1',
    'pathos>=0.3.0',
    'pytest>=7.3.1',
    'pytket==1.37.0',
    'docplex==2.28.240',
    'yfinance==0.2.54',
    'pytket-qiskit==0.62',
    'pytket-quantinuum==0.42.0',
    'qiskit==1.3.1',
    'scipy>=1.10.1',
    'seaborn>=0.12.2',
    'sympy>=1.12',
    'tqdm>=4.65.0',
]

version = "0.1.0"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 160
target-version = ['py310', 'py311']